--- a/Deal-Management-Service/src/main/resources/application.properties
+++ b/Deal-Management-Service/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=Deal-Management-Service
 
-spring.datasource.url=jdbc:mysql://localhost:3306/mtech_crm
-spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.url=jdbc:mysql://91.203.133.210:3306/leads
+spring.datasource.username=dealManagement
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
