--- a/Deal-Management-Service/src/main/resources/application.properties
+++ b/Deal-Management-Service/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=Deal-Management-Service
 
-spring.datasource.url=jdbc:mysql://91.203.133.210:3306/leads
+spring.datasource.url=jdbc:mysql://91.203.133.210:3306/QAleads
 spring.datasource.username=dealManagement
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
