--- a/Deal-Management-Service/src/main/resources/application.properties
+++ b/Deal-Management-Service/src/main/resources/application.properties
@@ -1,21 +1,3 @@
-spring.application.name=Deal-Management-Service
 
-spring.datasource.url=jdbc:mysql://91.203.133.210:3306/leads
-spring.datasource.username=dealManagement
-spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=false
+spring.profiles.active=master
 
-server.port=9090
-jwt.Secret=hgv6t
-jwt.expiration=180000000
-server.address=0.0.0.0
-
-spring.servlet.multipart.enabled=true
-spring.servlet.multipart.max-file-size=10MB
-spring.servlet.multipart.max-request-size=10MB
-
-spring.mvc.throw-exception-if-no-handler-found=true
-spring.web.resources.add-mappings=false
